remove trailing comma