@@ -321,13 +321,9 @@ public class ModuleTester {
             File runDockerSh) throws Exception {
         String scriptPath = DirUtils.getFilePath(runDockerSh);
         String repoPath = DirUtils.getFilePath(repoDir);
-        Process p = Runtime.getRuntime().exec(
-            new String[] {
-                "bash",
-                scriptPath, "build", "--rm", "-t",
-                targetImageName, repoPath
-            },
-        );
+        Process p = Runtime.getRuntime().exec(new String[] {
+            "bash", scriptPath, "build", "--rm", "-t", targetImageName, repoPath
+        });
         List<Thread> workers = new ArrayList<Thread>();
         InputStream[] inputStreams = new InputStream[] {p.getInputStream(), p.getErrorStream()};
         final String[] cntIdToDelete = {null};
